--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": "latest"
     },
+    "extends": "eslint:recommended",
     "rules":
     {
         "block-scoped-var": "error",
@@ -34,9 +36,7 @@
         "no-param-reassign": "error",
         "no-self-compare": "error",
         "no-void": "error",
-        "no-with": "error",
         "one-var": "error",
-        "quotes": ["warn", "double"],
         "semi": "error",
         "strict": "error",
         "vars-on-top": "error",
@@ -45,8 +45,7 @@
     "env":
     {
         "es6": true,
-        "browser": true,
-        "node": true
-    },
-    "extends": "eslint:recommended"
+        "node": true,
+        "browser": false
+    }
 }
