--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # data files
 data/
 
-# data base files
-db.sqlite
+# database files
+database.sqlite
 
 # node modules
 node_modules/
+
+# Exclude lock file to prevent error when students with different architectures install dependencies
+package-lock.json
